--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -297,7 +297,7 @@ ul li {
   float : left;
   margin: 0 5px;
   border: 2px solid transparent;
-  width : 100px;
+  width : 75px;
   height: 8em;
   padding: 1em 5px 0;
   text-align: center;
@@ -519,7 +519,7 @@ form a {
 }
 
 /* == Helper Styles ======================================================= */
-.highlight-bg:hover {
+.grey-bg {
   background-color: #f6f6f6;
 }
 
