licenses: fix navigation buttons (broken after changing order)

--- a/plugins/eulas/app/views/eulas/show.html.erb
+++ b/plugins/eulas/app/views/eulas/show.html.erb
@@ -52,11 +52,11 @@
   <% end %>
 </fieldset>
 <fieldset id="" class="">
-  <%= form_next_button + form_str_spacer %>
+  <%= form_next_button %>
   <%= if @first_eula
-        @first_basesystem_step ? "" : (form_back_button )
+        @first_basesystem_step ? "" : (form_str_spacer + form_back_button )
       else
-        (link_to _("Back"), :action => :show, :id => @prev_id)
+        form_str_spacer + (link_to _("Back"), :action => :show, :id => @prev_id)
       end %>
 </fieldset>
 <% end -%>
