--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -184,9 +184,10 @@
 
 	<tr><td>
           <div class="label"><%=_("Password")%></div>
-	</td><td>
+	</td><td colspan=2 rowspan=2>
           <%= f.password_field :user_password, :onkeyup => "$('#userForm').validate().element('#user_user_password');", :disabled => disabled, :required => true %>
 	</td></tr>
+	<tr><td>&nbsp;</td></tr>
 
 	<tr><td>
           <div class="label"><%=_("Confirm Password")%></div>
