webclient: gather fixes for javascript (map, filter, indexOf, some) into a single file.

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -47,6 +47,7 @@
   <script type="text/javascript" charset="utf-8" src="/inc/yast.widgets.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/yast.helpers.js"></script>
   <!-- custom page scripts and css -->
+  <script type="text/javascript" charset="utf-8" src="/javascripts/browser_fixes.js"></script>
   <%= yield :before_script %>
   <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
   <script type="text/javascript" charset="utf-8" src="/javascripts/application.js"></script>
