--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -130,8 +130,8 @@
       </div>
       </fieldset>
   </div>
-  <fieldset>
+  <div class="nav-buttons">
       <%= form_send_buttons :disabled => disabled, :class => "button" %>
-  </fieldset>
+  </div>
   <% end %>
 </div>
