--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -7,10 +7,10 @@
 <%= select_tag "webyast_language",
   options_for_select(LangHelper::LANGUAGES.invert.to_a.reject{|val| !(supported_languages.include?(val[1]))}.sort_by { |a| a[0].parameterize}, current_locale) %>
    </p>
-</fieldset>
-<fieldset>
-  <%= form_send_buttons %>
-</fieldset>
+  </fieldset>
+  <div class="nav-buttons">
+    <%= form_send_buttons %>
+  </div>
 <% end -%>
 </div>
 
