--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -91,9 +91,9 @@
       </p>
       <p><label for="mail_test_mail_address" generated="true" class="error"></label></p>
     </fieldset> 
-    <p>
-    <%= form_send_buttons :disabled => disabled %>
-    </p>
+    <div class="nav-buttons">
+      <%= form_send_buttons :disabled => disabled %>
+    </div>
   <% end %>
 </div>
 
