--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -312,7 +312,7 @@ commands	= [ "start", "stop", "restart", "enable", "disable"]
   </div>
 <% end %>
 </div>
-<fieldset>
-<%= form_back_button %>
-</fieldset>
+<div class="nav-buttons">
+  <%= form_back_button %>
+</div>
 </div>
