--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -156,11 +156,11 @@
                                  :update => log_id(log.id)) #currently due missing '=' disabled %>
 <% end %>
 </div>
-<fieldset>
-<p>
-<%= link_to  _("Edit Limits"), '/status/edit' %>
-</p>
-<%= form_back_button %> 
-</fieldset>
+  <div class="nav-buttons">
+    <p>
+      <%= link_to  _("Edit Limits"), '/status/edit' %>
+    </p>
+  <%= form_back_button %> 
+  </div>
 </div>
 
