--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -200,9 +200,9 @@
   <% end %>
 
 </fieldset>
-<fieldset>
-  <%= form_send_buttons :disabled => disabled, :class => "button" %>
-</fieldset>
+  <div class="nav-buttons">
+    <%= form_send_buttons :disabled => disabled, :class => "button" %>
+  </div>
   <% end %>
 </div>
 
