--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -109,11 +109,11 @@
      </div>
   </div>
 
-  <fieldset>
+  <div class="nav-buttons">
     <%= form_next_button %>
     <%= form_str_spacer %>
 	 <%= form_cancel_button :action => :index %>
-  </fieldset>
+  </div>
 
 <% end %>
     <div><input type="hidden" id="all_users_string" value="<%= @all_users_string %>" /></div>
