--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -266,11 +266,11 @@
     </fieldset>
 
   </div>
-  <fieldset>
+  <div class="nav-buttons">
     <%= form_next_button :onclick=>"return new_user_validation(this);" %>
     <%= form_str_spacer %>
-	 <%= form_cancel_button :action => :index%>    
-  </fieldset>
+    <%= form_cancel_button :action => :index%>
+  </div>
 <% end %>
             <div><input type="hidden" id="all_grps_string" value="<%= @all_grps_string %>" /></div>
 </div>
