--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -179,7 +179,7 @@
           <div class="label"><%=_("Login Name")%></div>
 	</td><td>
           <%= f.text_field :uid, :disabled => disabled, :onblur => "$('#userForm').validate().element('#user_uid') && propose_home(this.parentNode.parentNode.parentNode.parentNode.parentNode);", :class => "required" %>
-          <%= f.text_field :id, :class => "hidden" %>
+          <%= f.hidden_field :id %>
 	</td></tr>
 
 	<tr><td>
