--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -183,7 +183,7 @@ function disable(which){
 
       <div class="fieldset-group tabs_<%= user.uid %>">
 
-      <fieldset id="tab_login_<%= user.uid %>" class="wrapper with-background">
+      <fieldset id="tab_login_<%= user.uid %>">
        <legend><span><%= _("Login Settings") %></span></legend>
        <table border=0>
 	<tr><td>
@@ -215,7 +215,7 @@ function disable(which){
       </table>
      </fieldset>
 
-      <fieldset id="tab_groups_<%= user.uid %>" class="wrapper with-background">
+      <fieldset id="tab_groups_<%= user.uid %>">
       <legend><span><%=_("Groups")%></span></legend>
       <table>
 	<tr><td rowspan=2>
@@ -244,7 +244,7 @@ function disable(which){
        </table>
       </fieldset>
 
-      <fieldset id="tab_advanced_<%= user.uid %>" class="wrapper with-background">
+      <fieldset id="tab_advanced_<%= user.uid %>">
       <legend><span><%= _("Advanced") %></span></legend>
       <table>
 	<tr><td>
