--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -166,7 +166,7 @@
 
   <div class="fieldset-group">
 
-    <fieldset id="tab_login" class="wrapper with-background">
+    <fieldset id="tab_login">
       <legend><span><%= _("Login Settings") %></span></legend>
 	<table>
 	<tr><td>
@@ -199,7 +199,7 @@
 	</table>
     </fieldset>
 
-    <fieldset id="tab_groups" class="wrapper with-background">
+    <fieldset id="tab_groups">
       <legend><span><%=_("Groups")%></span></legend>
 	<table border=0>
 	<tr><td rowspan=2>
@@ -241,7 +241,7 @@
 	 </div>
     </fieldset>
 
-    <fieldset id="tab_advanced" class="wrapper with-background">
+    <fieldset id="tab_advanced">
       <legend><span><%= _("Advanced") %></span></legend>
 	<table>
 	<tr><td>
