--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -63,7 +63,7 @@
 
   <% form_for(:mail, @mail, :url => { :action => "update" }, :html => { :method => :put, :id => "mailForm", :autocomplete => :off, :onsubmit => "if ($('#mailForm').valid()) $('#progress').show()" } ) do |f| %>
   <%= f.error_messages %>
-    <fieldset  class="wrapper with-background">
+    <fieldset>
       <p>
         <label for="<%= :smtp_server %>"><%=_("Outgoing mail server")%></label>
         <%=f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></p>
@@ -83,7 +83,7 @@
       <!-- this is a pre-generated placeholder for the validation messages -->
       <p><label for="mail_confirm_password" generated="true" class="error"></label></p>
     </fieldset> 
-    <fieldset  class="wrapper with-background">
+    <fieldset>
       <p>
         <label><%=_("Send test mail to")%></label>
         <%= f.text_field :test_mail_address, :disabled => disabled, :class => "email" %>
