--- a/webclient/public/stylesheets/jquery-ui-1.7.2.custom-accordion.css
+++ b/webclient/public/stylesheets/jquery-ui-1.7.2.custom-accordion.css
@@ -24,11 +24,13 @@
 .ui-accordion .ui-accordion-header a { display: block; font-size: 1em; padding: 0; }
 
 
-.ui-accordion .ui-accordion-content { 
+.accordion.ui-accordion .ui-accordion-content { 
   display: none; 
   border: none;
   background: none;
+  padding: 0px;
 }
+
 .ui-accordion .ui-accordion-content-active { display: block; }
 
 .ui-accordion .status-icon {
